--- a/src/app/ui/ui.component.css
+++ b/src/app/ui/ui.component.css
@@ -29,8 +29,15 @@
     cursor: pointer;
     color: blue;
 }
+
 .substraction-button {
     cursor: pointer;
     color: green;
+}
+
+.div-button {
+    cursor: pointer;
+    color: black;
+    font-size: 18px;
 }
 
