--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -15,6 +15,7 @@
 
     <i class="glyphicon glyphicon-plus addition-button" (click)="addition()"></i> <!-- Suma -->
     <i class="glyphicon glyphicon-minus substraction-button" (click)="substraction()"></i> <!-- Resta -->
+    <i class="div-button" (click)="division()"> / </i> <!-- Div -->
 
 </div>
 
