add exp ui and test

--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -16,6 +16,7 @@
     <i class="glyphicon glyphicon-plus addition-button" (click)="addition()"></i> <!-- Suma -->
     <i class="glyphicon glyphicon-minus substraction-button" (click)="substraction()"></i> <!-- Resta -->
     <i class="div-button" (click)="division()"> / </i> <!-- Div -->
+    <i class="exp-button" (click)="exp()"> ^ </i> <!-- exp -->
 
 </div>
 
