add mul ui and test

--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -17,6 +17,7 @@
     <i class="glyphicon glyphicon-minus substraction-button" (click)="substraction()"></i> <!-- Resta -->
     <i class="div-button" (click)="division()"> / </i> <!-- Div -->
     <i class="exp-button" (click)="exp()"> ^ </i> <!-- exp -->
+    <i class="mul-button" (click)="mul()"> * </i> <!-- Mul -->
 
 </div>
 
