add sqrt ui and test

--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -18,7 +18,8 @@
     <i class="div-button" (click)="division()"> / </i> <!-- Div -->
     <i class="exp-button" (click)="exp()"> ^ </i> <!-- exp -->
     <i class="mul-button" (click)="mul()"> * </i> <!-- Mul -->
-    <i class="sqr-button" (click)="sqr()"> * </i> <!-- Sqr -->
+    <i class="sqr-button" (click)="sqr()"> Sqr </i> <!-- Sqr -->
+    <i class="sqrt-button" (click)="sqrt()"> Sqrt </i> <!-- Sqrt -->
 
 </div>
 
